manifests/traefik-config/middleware-no-compression.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: no-compression
  namespace: traefik
spec:
  headers:
    customRequestHeaders:
      Accept-Encoding: identity
