manifests/traefik-config/deployment-security-txt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: security-txt
  namespace: traefik
  labels:
    app: security-txt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: security-txt
  template:
    metadata:
      labels:
        app: security-txt
    spec:
      containers:
        - name: nginx
          image: nginx:1.31-alpine
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: security-txt
              mountPath: /usr/share/nginx/html/.well-known/
              readOnly: true
          resources:
            requests:
              cpu: 5m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi
      volumes:
        - name: security-txt
          configMap:
            name: security-txt
