manifests/traefik-config/service-security-txt.yaml
apiVersion: v1
kind: Service
metadata:
  name: security-txt
  namespace: traefik
  labels:
    app: security-txt
spec:
  selector:
    app: security-txt
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
