manifests/traefik-config/ingressroute-security-txt.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: security-txt
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Path(`/.well-known/security.txt`) || Path(`/.well-known/pgp-key.txt`)
      kind: Rule
      priority: 9999
      services:
        - name: security-txt
          port: 80
  tls:
    certResolver: letsencrypt
